--- a/PirateClicker.uproject
+++ b/PirateClicker.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "PirateClicker",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		}
 	],
 	"TargetPlatforms": [
