--- a/.gitignore
+++ b/.gitignore
@@ -588,3 +588,4 @@ FodyWeavers.xsd
 # Additional files built by Visual Studio
 
 # End of https://www.toptal.com/developers/gitignore/api/unrealengine,visualstudio,visualstudiocode,rider
+Plugins/
