--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,7 +10,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/PirateClicker/Maps/Island_1_Blue_Lagoon.Island_1_Blue_Lagoon
+GameDefaultMap=/Game/PirateClicker/Maps/Dev.Dev
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Script/Engine.GameModeBase
 GlobalDefaultServerGameMode=None
@@ -27,7 +27,7 @@ AppliedDefaultGraphicsPerformance=Scalable
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="PirateClickerGameModeBase")
 
 [/Script/Engine.RendererSettings]
-r.Mobile.DisableVertexFog=False
+r.Mobile.DisableVertexFog=True
 r.Shadow.CSM.MaxMobileCascades=2
 r.MobileMSAA=1
 r.Mobile.AllowDitheredLODTransition=False
@@ -57,16 +57,16 @@ r.ForwardShading=False
 r.VertexFoggingForOpaque=True
 r.AllowStaticLighting=True
 r.NormalMapsForStaticLighting=False
-r.GenerateMeshDistanceFields=True
+r.GenerateMeshDistanceFields=False
 r.DistanceFieldBuild.EightBit=False
-r.GenerateLandscapeGIData=True
+r.GenerateLandscapeGIData=False
 r.DistanceFieldBuild.Compress=False
 r.TessellationAdaptivePixelsPerTriangle=48.000000
 r.SeparateTranslucency=False
 r.TranslucentSortPolicy=0
 TranslucentSortAxis=(X=0.000000,Y=-1.000000,Z=0.000000)
 vr.VRS.HMDFixedFoveationLevel=0
-r.CustomDepth=3
+r.CustomDepth=1
 r.CustomDepthTemporalAAJitter=True
 r.PostProcessing.PropagateAlpha=0
 r.DefaultFeature.Bloom=False
@@ -154,109 +154,12 @@ IconPortalPath=(Path="")
 
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
 PackageName=com.DvergVerksted.[PROJECT]
-StoreVersion=1
-StoreVersionOffsetArmV7=0
-StoreVersionOffsetArm64=0
-StoreVersionOffsetX8664=0
-ApplicationDisplayName=
-VersionDisplayName=1.0
-MinSDKVersion=19
 TargetSDKVersion=32
-InstallLocation=InternalOnly
-bEnableGradle=True
-bEnableLint=False
 bPackageDataInsideApk=True
-bCreateAllPlatformsInstall=False
-bDisableVerifyOBBOnStartUp=True
 bForceSmallOBBFiles=True
-bAllowLargeOBBFiles=False
-bAllowPatchOBBFile=False
-bAllowOverflowOBBFiles=False
-bUseExternalFilesDir=True
-bPublicLogFiles=True
-Orientation=SensorLandscape
-MaxAspectRatio=2.100000
-bUseDisplayCutout=False
-bRestoreNotificationsOnReboot=False
-bFullScreen=True
-bEnableNewKeyboard=True
-DepthBufferPreference=Default
-bValidateTextureFormats=True
-bEnableBundle=False
-bEnableUniversalAPK=True
-bBundleABISplit=True
-bBundleLanguageSplit=True
-bBundleDensitySplit=True
-ExtraApplicationSettings=
-ExtraActivitySettings=
-+ExtraPermissions=android.permission.WRITE_EXTERNAL_STORAGE
-+ExtraPermissions=android.permission.READ_EXTERNAL_STORAGE
-bAndroidVoiceEnabled=False
-bRemoveOSIG=False
-+GoogleVRCaps=Daydream33
-bGoogleVRSustainedPerformance=False
+bEnableBundle=True
+bBuildForArm64=True
 KeyStore=PirateClicker.keystore
 KeyAlias=PirateClickerKey
 KeyStorePassword=VeligodMark55+
 KeyPassword=VeligodMark55+
-bBuildForArmV7=True
-bBuildForArm64=True
-bBuildForX8664=False
-bBuildForES31=True
-bSupportsVulkan=False
-bSupportsVulkanSM5=False
-ClangSanitizer=None
-bAndroidOpenGLSupportsBackbufferSampling=False
-bDetectVulkanByDefault=True
-bBuildWithHiddenSymbolVisibility=False
-bSaveSymbols=False
-bForceLDLinker=False
-bEnableGooglePlaySupport=True
-bUseGetAccounts=False
-GamesAppID=
-bEnableSnapshots=False
-bSupportAdMob=True
-AdMobAdUnitID=
-GooglePlayLicenseKey=
-GCMClientSenderID=
-bShowLaunchImage=True
-bAllowIMU=False
-bAllowControllers=True
-bBlockAndroidKeysOnControllers=False
-bControllersBlockDeviceFeedback=False
-AndroidAudio=Default
-AudioSampleRate=44100
-AudioCallbackBufferFrameSize=1024
-AudioNumBuffersToEnqueue=4
-AudioMaxChannels=0
-AudioNumSourceWorkers=0
-SpatializationPlugin=
-ReverbPlugin=
-OcclusionPlugin=
-CompressionOverrides=(bOverrideCompressionTimes=False,DurationThreshold=5.000000,MaxNumRandomBranches=0,SoundCueQualityIndex=0)
-bUseAudioStreamCaching=False
-CacheSizeKB=0
-MaxChunkSizeOverrideKB=0
-bResampleForDevice=False
-SoundCueCookQualityIndex=-1
-MaxSampleRate=0.000000
-HighSampleRate=0.000000
-MedSampleRate=0.000000
-LowSampleRate=0.000000
-MinSampleRate=0.000000
-CompressionQualityModifier=0.000000
-AutoStreamingThreshold=0.000000
-AndroidGraphicsDebugger=None
-MaliGraphicsDebuggerPath=(Path="")
-bEnableMaliPerfCounters=False
-bMultiTargetFormat_ETC2=True
-bMultiTargetFormat_DXT=True
-bMultiTargetFormat_ASTC=True
-TextureFormatPriority_ETC2=0.200000
-TextureFormatPriority_DXT=0.600000
-TextureFormatPriority_ASTC=0.900000
-SDKAPILevelOverride=
-NDKAPILevelOverride=
-bStreamLandscapeMeshLODs=False
-bEnableDomStorage=False
-
