--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -83,4 +83,11 @@ bSkipMovies=False
 +IniKeyBlacklist=IniKeyBlacklist
 +IniKeyBlacklist=IniSectionBlacklist
 +MapsToCook=(FilePath="/Game/PirateClicker/Maps/Island_1_Blue_Lagoon")
++DirectoriesToAlwaysCook=(Path="/Game/FMOD/Banks")
++DirectoriesToAlwaysCook=(Path="/Game/FMOD/Buses")
++DirectoriesToAlwaysCook=(Path="/Game/FMOD/Events")
++DirectoriesToAlwaysCook=(Path="/Game/FMOD/Reverbs")
++DirectoriesToAlwaysCook=(Path="/Game/FMOD/Snapshots")
++DirectoriesToAlwaysCook=(Path="/Game/FMOD/VCAs")
++DirectoriesToAlwaysStageAsNonUFS=(Path="FMOD/Desktop")
 
