--- a/.gitignore
+++ b/.gitignore
@@ -218,3 +218,7 @@ Plugins/FMODStudio/Binaries/Win64/UE4Editor-FMODStudioEditor-Win64-DebugGame.pdb
 Plugins/FMODStudio/Binaries/Win64/UE4Editor-FMODStudioEditor-Win64-DebugGame.dll
 Plugins/FMODStudio/Binaries/Win64/UE4Editor-FMODStudio-Win64-DebugGame.pdb
 Plugins/FMODStudio/Binaries/Win64/UE4Editor-FMODStudio-Win64-DebugGame.dll
+Plugins/FMODStudio/Binaries/Win64/UE4Editor-FMODStudioEditor.pdb
+Plugins/FMODStudio/Binaries/Win64/UE4Editor-FMODStudioEditor.dll
+Plugins/FMODStudio/Binaries/Win64/UE4Editor-FMODStudio.pdb
+Plugins/FMODStudio/Binaries/Win64/UE4Editor-FMODStudio.dll
