Global game update v 0.2.7
- Setup update version 0.2.7
- Add Dialog system
- Remove Move semantic for push array actor Hit

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,7 +10,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/PirateClicker/Maps/Dev.Dev
+GameDefaultMap=/Game/PirateClicker/Maps/Map_Island_2.Map_Island_2
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Script/Engine.GameModeBase
 GlobalDefaultServerGameMode=None
@@ -154,10 +154,10 @@ IconPortalPath=(Path="")
 
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
 PackageName=com.DvergVerksted.[PROJECT]
-TargetSDKVersion=32
+TargetSDKVersion=31
 bPackageDataInsideApk=True
 bForceSmallOBBFiles=True
-bEnableBundle=True
+bEnableBundle=False
 bBuildForArm64=True
 KeyStore=PirateClicker.keystore
 KeyAlias=PirateClickerKey
