Update to build version 0.2.7

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -154,7 +154,7 @@ IconPortalPath=(Path="")
 
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
 PackageName=com.DvergVerksted.[PROJECT]
-TargetSDKVersion=31
+TargetSDKVersion=32
 bPackageDataInsideApk=True
 bForceSmallOBBFiles=True
 bEnableBundle=False
@@ -163,6 +163,9 @@ KeyStore=PirateClicker.keystore
 KeyAlias=PirateClickerKey
 KeyStorePassword=VeligodMark55+
 KeyPassword=VeligodMark55+
+MinSDKVersion=21
+VersionDisplayName=0.2.7
+StoreVersion=1
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
