Update to engine UE5.1

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -164,8 +164,9 @@ KeyAlias=PirateClickerKey
 KeyStorePassword=VeligodMark55+
 KeyPassword=VeligodMark55+
 MinSDKVersion=21
-VersionDisplayName=0.2.7
+VersionDisplayName=0.2.8
 StoreVersion=1
+bBuildForArmV7=False
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
@@ -223,4 +224,18 @@ StoreVersion=1
 +CollisionChannelRedirects=(OldName="Dynamic",NewName="WorldDynamic")
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
+
+[/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
+bEnablePlugin=True
+bAllowNetworkConnection=True
+SecurityToken=E869A0BB46F8E737565BB5B3CE3910D3
+bIncludeInShipping=False
+bAllowExternalStartInShipping=False
+bCompileAFSProject=False
+bUseCompression=False
+bLogFiles=False
+bReportStats=False
+ConnectionType=USBOnly
+bUseManualIPAddress=False
+ManualIPAddress=
 
