--- a/.gitignore
+++ b/.gitignore
@@ -222,3 +222,5 @@ Plugins/FMODStudio/Binaries/Win64/UE4Editor-FMODStudioEditor.pdb
 Plugins/FMODStudio/Binaries/Win64/UE4Editor-FMODStudioEditor.dll
 Plugins/FMODStudio/Binaries/Win64/UE4Editor-FMODStudio.pdb
 Plugins/FMODStudio/Binaries/Win64/UE4Editor-FMODStudio.dll
+.gradle
+.vsconfig
