--- a/.gitignore
+++ b/.gitignore
@@ -224,3 +224,8 @@ Plugins/FMODStudio/Binaries/Win64/UE4Editor-FMODStudio.pdb
 Plugins/FMODStudio/Binaries/Win64/UE4Editor-FMODStudio.dll
 .gradle
 .vsconfig
+Plugins/FMODStudio/Binaries/Win64/UnrealEditor-Win64-DebugGame.modules
+Plugins/FMODStudio/Binaries/Win64/UnrealEditor-FMODStudioEditor-Win64-DebugGame.pdb
+Plugins/FMODStudio/Binaries/Win64/UnrealEditor-FMODStudioEditor-Win64-DebugGame.dll
+Plugins/FMODStudio/Binaries/Win64/UnrealEditor-FMODStudio-Win64-DebugGame.pdb
+Plugins/FMODStudio/Binaries/Win64/UnrealEditor-FMODStudio-Win64-DebugGame.dll
